@@ -49,8 +49,8 @@ void		ECPGfree_type(struct ECPGtype *);
    size is the maxsize in case it is a varchar. Otherwise it is the size of
 	   the variable (required to do array fetches of structs).
  */
-void ECPGdump_a_type(FILE *, const char *, struct ECPGtype *, const char *,
-		const char *, struct ECPGtype *, const char *, const char *,
+void ECPGdump_a_type(FILE *, const char *, struct ECPGtype *, 
+		const char *, struct ECPGtype *, const char *,
 		const char *, char *, const char *, const char *);
 
 /* A simple struct to keep a variable and its type. */
@@ -147,9 +147,7 @@ struct variable
 struct arguments
 {
 	struct variable *variable;
-	char *var_array_element;
 	struct variable *indicator;
-	char *ind_array_element;
 	struct arguments *next;
 };
 
